--- a/main.html
+++ b/main.html
@@ -3,6 +3,14 @@
   <head>
     <title>Travel Landing Page</title>
     <link rel="stylesheet" href="style/header.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Gilda Display"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Urbanist"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- HEADER-->
@@ -11,7 +19,39 @@
         <span class="nav-title">Travel</span>
         <img class="nav-burger-icon" src="image/burger-icon.png" />
       </nav>
-      <div></div>
+
+      <section class="header-content">
+        <div class="content-container">
+          <div class="hero-title">
+            <span class="color">Travel</span> around the world
+          </div>
+
+          <div class="circle-border centered-axis-x">
+            <div class="circle centered-axis-x"></div>
+          </div>
+          <img
+            class="blog-photo centered-axis-x"
+            src="image/dc793ac867cfa1ee00865f17dfc46032.png"
+          />
+          <div class="content-box centered-axis-x">
+            <div class="content-box-content">
+              <span class="content-box-text"
+                >Travel around the world to see the beauty of nature easily and
+                safely with Travel.</span
+              >
+              <div class="line"></div>
+              <span class="content-box-text-second"
+                >We Are The Best Travel Agent</span
+              >
+              <div class="line"></div>
+              <span class="content-box-text"
+                >Everyone is young once, but not everyone has traveled the
+                world!</span
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
   </body>
 </html>
