--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
   <head>
     <title>Travel Landing Page</title>
     <link rel="stylesheet" href="style/header.css" />
+    <link rel="stylesheet" href="style/first-section.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Gilda Display"
@@ -53,5 +54,7 @@
         </div>
       </section>
     </header>
+    <!-- FIRST SECTION-->
+    <section class="destinations">d</section>
   </body>
 </html>
