1st section header completed

--- a/main.html
+++ b/main.html
@@ -55,6 +55,28 @@
       </section>
     </header>
     <!-- FIRST SECTION-->
-    <section class="destinations">d</section>
+    <section class="destinations">
+      <div class="des-hero">
+        <h2>Find your best destination</h2>
+        <div class="des-search">
+          <div class="des-choices">
+            We have more than 1000+ destinations you can choose.
+          </div>
+          <div class="search-bar">
+            <div class="search-box">
+              <img class="location" src="image/location.png" />
+              <input
+                class="search-input"
+                placeholder="Search destinations ..."
+              />
+              <span class="dot"
+                ><img class="search-icon" src="image/searxh.png"
+              /></span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div></div>
+    </section>
   </body>
 </html>
