--- a/main.html
+++ b/main.html
@@ -76,6 +76,70 @@
           </div>
         </div>
       </div>
+
+      <div class="list-of-destination">
+        <div class="destination-card">
+          <img class="place-image" src="image/i1.jpg" />
+          <div class="card-content">
+            <div class="card-title">Mirror Lake</div>
+            <div class="card-description">
+              <img class="card-location" src="image/location.png" />Jawa Tengah,
+              Indonesia
+            </div>
+          </div>
+        </div>
+        <div class="destination-card">
+          <img class="place-image" src="image/i2.jpg" />
+          <div class="card-content">
+            <div class="card-title">Hot Air Balloon</div>
+            <div class="card-description">
+              <img class="card-location" src="image/location.png" />Jawa Tengah,
+              Indonesia
+            </div>
+          </div>
+        </div>
+        <div class="destination-card">
+          <img class="place-image" src="image/i3.jpg" />
+          <div class="card-content">
+            <div class="card-title">Oeschinen Lake</div>
+            <div class="card-description">
+              <img class="card-location" src="image/location.png" />Jawa Tengah,
+              Indonesia
+            </div>
+          </div>
+        </div>
+        <div class="destination-card">
+          <img class="place-image" src="image/i4.jpg" />
+          <div class="card-content">
+            <div class="card-title">Rhine Fall</div>
+            <div class="card-description">
+              <img class="card-location" src="image/location.png" />Jawa Tengah,
+              Indonesia
+            </div>
+          </div>
+        </div>
+        <div class="destination-card">
+          <img class="place-image" src="image/i5.jpg" />
+          <div class="card-content">
+            <div class="card-title">Sunter Lake</div>
+            <div class="card-description">
+              <img class="card-location" src="image/location.png" />Jawa Tengah,
+              Indonesia
+            </div>
+          </div>
+        </div>
+        <div class="destination-card">
+          <img class="place-image" src="image/i6.jpg" />
+          <div class="card-content">
+            <div class="card-title">Negeri di atas Awan</div>
+            <div class="card-description">
+              <img class="card-location" src="image/location.png" />Jawa Tengah,
+              Indonesia
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div></div>
     </section>
   </body>
