--- a/main.html
+++ b/main.html
@@ -4,6 +4,8 @@
     <title>Travel Landing Page</title>
     <link rel="stylesheet" href="style/header.css" />
     <link rel="stylesheet" href="style/first-section.css" />
+    <link rel="stylesheet" href="style/second-section.css" />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Gilda Display"
@@ -143,6 +145,29 @@
       <div></div>
     </section>
     <!-- SECOND SECTION-->
-    <section class="reason"></section>
+    <section class="reason">
+      <div class="reason-hero">
+        <h3>Why must choose us</h3>
+        <p>
+          We have been around for over 10 years. Accompany all our customers all
+          over the world. Thousands of our customers always recommend us because
+          of the service we provide. We are always re-elected and now you will
+          choose us as your travel agent!
+        </p>
+      </div>
+      <div class="reason-content">
+        <div class="reason-card">
+          <div class="reason-card-content">
+            <div class="title-card">Best Guide, Best Experience.</div>
+            <div class="content-card">
+              Your trip will be very memorable with the best guide.
+            </div>
+          </div>
+        </div>
+        <div class="reason-card"></div>
+        <div class="reason-card"></div>
+      </div>
+      <div></div>
+    </section>
   </body>
 </html>
