--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style/header.css" />
     <link rel="stylesheet" href="style/first-section.css" />
     <link rel="stylesheet" href="style/second-section.css" />
-
+    <link rel="stylesheet" href="style/third-section.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Gilda Display"
@@ -162,12 +162,65 @@
             <div class="content-card">
               Your trip will be very memorable with the best guide.
             </div>
+            <div class="details">
+              <div class="detail-text">More details</div>
+              <img class="arrow" src="image/arrow-right.png" />
+            </div>
           </div>
         </div>
-        <div class="reason-card"></div>
-        <div class="reason-card"></div>
+        <div class="reason-card-colored">
+          <div class="reason-card-content">
+            <div class="title-card">Always have Special Tickets.</div>
+            <div class="content-card">
+              We always offer special tickets and we give them to all customers
+            </div>
+            <div class="details">
+              <div class="detail-text">More details</div>
+              <img class="arrow" src="image/arrow.png" />
+            </div>
+          </div>
+        </div>
+
+        <div class="reason-card">
+          <div class="reason-card-content">
+            <div class="title-card">Always Ready Support 24/7.</div>
+            <div class="content-card">
+              We always make time to ask questions anytime and anywhere.
+            </div>
+            <div class="details">
+              <div class="detail-text">More details</div>
+              <img class="arrow" src="image/arrow-right.png" />
+            </div>
+          </div>
+        </div>
       </div>
       <div></div>
+    </section>
+    <!-- THIRD SECTION-->
+    <section class="memorable">
+      <div class="content-group">
+        <div class="mem-text-box">
+          <div class="mem-hero">
+            <span class="color">Travel</span>, make the trip memorable
+          </div>
+          <div class="mem-description">
+            Thousands of our customers always recommend us because of the
+            service we provide. Your trip will be very memorable with the best
+            travel agent, <span class="color">Travel!</span>
+          </div>
+        </div>
+        <div class="mem-botton">
+          <div class="option">
+            <div class="option-text">See more</div>
+          </div>
+
+          <button class="mem-button" type="button">
+            <div class="button-text">Discover More</div>
+            <div class="line"></div>
+          </button>
+        </div>
+      </div>
+      <div class="memory-image">hhh</div>
     </section>
   </body>
 </html>
