third section completed

--- a/main.html
+++ b/main.html
@@ -216,11 +216,13 @@
 
           <button class="mem-button" type="button">
             <div class="button-text">Discover More</div>
-            <div class="line"></div>
           </button>
         </div>
       </div>
-      <div class="memory-image">hhh</div>
+      <div class="memory-image">
+        <img class="shape" src="image/Shape.png" />
+        <img class="trip-image" src="image/Image.png" />
+      </div>
     </section>
   </body>
 </html>
