--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style/first-section.css" />
     <link rel="stylesheet" href="style/second-section.css" />
     <link rel="stylesheet" href="style/third-section.css" />
+    <link rel="stylesheet" href="style/fourth-section.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Gilda Display"
@@ -222,6 +223,13 @@
       <div class="memory-image">
         <img class="shape" src="image/Shape.png" />
         <img class="trip-image" src="image/Image.png" />
+      </div>
+    </section>
+    <!-- FOURTH SECTION-->
+    <section class="documentation">
+      <div class="doc-title">Watch our entire trip documentation</div>
+      <div class="video">
+        <img class="video-img" src="image/Video.png" />
       </div>
     </section>
   </body>
