--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/second-section.css" />
     <link rel="stylesheet" href="style/third-section.css" />
     <link rel="stylesheet" href="style/fourth-section.css" />
+    <link rel="stylesheet" href="style/footer.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Gilda Display"
@@ -145,8 +146,9 @@
 
       <div></div>
     </section>
+    -->
     <!-- SECOND SECTION-->
-    <section class="reason">
+    <!-- <section class="reason">
       <div class="reason-hero">
         <h3>Why must choose us</h3>
         <p>
@@ -196,9 +198,9 @@
         </div>
       </div>
       <div></div>
-    </section>
+    </section> -->
     <!-- THIRD SECTION-->
-    <section class="memorable">
+    <!-- <section class="memorable">
       <div class="content-group">
         <div class="mem-text-box">
           <div class="mem-hero">
@@ -224,13 +226,38 @@
         <img class="shape" src="image/Shape.png" />
         <img class="trip-image" src="image/Image.png" />
       </div>
-    </section>
+    </section> -->
     <!-- FOURTH SECTION-->
-    <section class="documentation">
+    <!-- <section class="documentation">
       <div class="doc-title">Watch our entire trip documentation</div>
       <div class="video">
         <img class="video-img" src="image/Video.png" />
       </div>
-    </section>
+    </section> -->
+    <!-- FOOTER -->
+    <!-- <footer>
+      <div class="foot-hero">
+        <div class="hero-content">
+          <h2>Get our best offer now!</h2>
+          <div class="click-box">
+            <h6>Click here!</h6>
+          </div>
+        </div>
+      </div>
+      <div class="foot-content">
+        <div class="contact">
+          <div class="contact-content">
+            <h4>Travel</h4>
+            <h6>
+              The best travel agent in the world. Contact us immediatly now!
+            </h6>
+          </div>
+          <div class="social-links">
+            <img class="socials" src="image/instagram.png" />
+            </div>
+        </div>
+        <div class="navigation"></div>
+      </div>
+    </footer> -->
   </body>
 </html>
