--- a/main.html
+++ b/main.html
@@ -148,7 +148,7 @@
     </section>
     -->
     <!-- SECOND SECTION-->
-    <!-- <section class="reason">
+    <section class="reason">
       <div class="reason-hero">
         <h3>Why must choose us</h3>
         <p>
@@ -198,9 +198,10 @@
         </div>
       </div>
       <div></div>
-    </section> -->
+    </section>
+    -->
     <!-- THIRD SECTION-->
-    <!-- <section class="memorable">
+    <section class="memorable">
       <div class="content-group">
         <div class="mem-text-box">
           <div class="mem-hero">
@@ -226,16 +227,18 @@
         <img class="shape" src="image/Shape.png" />
         <img class="trip-image" src="image/Image.png" />
       </div>
-    </section> -->
+    </section>
+    -->
     <!-- FOURTH SECTION-->
-    <!-- <section class="documentation">
+    <section class="documentation">
       <div class="doc-title">Watch our entire trip documentation</div>
       <div class="video">
         <img class="video-img" src="image/Video.png" />
       </div>
-    </section> -->
+    </section>
+    -->
     <!-- FOOTER -->
-    <!-- <footer>
+    <!--<footer>
       <div class="foot-hero">
         <div class="hero-content">
           <h2>Get our best offer now!</h2>
@@ -254,10 +257,11 @@
           </div>
           <div class="social-links">
             <img class="socials" src="image/instagram.png" />
-            </div>
+          </div>
         </div>
         <div class="navigation"></div>
       </div>
-    </footer> -->
+    </footer>
+    -->
   </body>
 </html>
