2nd section mobile complete

--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@
           <div class="card-content">
             <div class="card-title">Mirror Lake</div>
             <div class="card-description">
-              <img class="card-location" src="image/location.png" />Jawa Tengah,
+              <img class="card-location" src="image/Location2.png" />Jawa Tengah,
               Indonesia
             </div>
           </div>
@@ -146,7 +146,6 @@
 
       <div></div>
     </section>
-    -->
     <!-- SECOND SECTION-->
     <section class="reason">
       <div class="reason-hero">
